# ECE1140-Project

./: .gitignore  CMakeLists.txt  NewTrains-Workspace.code-workspace  README.md  TestProgram  main.c  main.py  requirements.txt
UnitTests/CatchTests/CTCUnitTests/: CMakeLists.txt  CTCDef_test.cpp
docs/: arch.md  coding standard.md  (+5 more)
src/: CMakeLists.txt  CommonDef.py  Main.cpp  ServerFunctions.py  common_def.py  logger.py  main.c  main.py  server_functions.py  signals.py  timekeeper.py
src/CTC/: CMakeLists.txt  CTCDef.py  CTCMain.cpp  CTCMain.py  CTCRequestManager.cpp  TestTrainSystem.py  TrainSystem.cpp  TrainSystem.py  ctc_def.py  main.cpp  test_train_system.py  train_system.py
src/Common/: CMakeLists.txt  DebugRequestManager.cpp  RequestManagerRepository.cpp  Timekeeper.cpp
src/Debug/: Assert.cpp  CMakeLists.txt  DebugRequestManager.cpp  DebugUtil.cpp  Logger.cpp
src/HWTrackController/: CMakeLists.txt  HWTrackControllerMain.cpp  HWTrackControllerRequestManager.cpp  RequestManager.cpp  build_and_upload.py  hw_track_controller_api.py  hw_track_controller_connector.py
src/HWTrackController/Main/: Main.ino
src/HWTrackController/Main/include/: Communications.hpp  HashMap.hpp  Instruction.hpp  InstructionIface.hpp  List.hpp  Logger.hpp  Routine.hpp  Rung.hpp  Scheduler.hpp  SystemTask.hpp  TagDatabase.hpp  Task.hpp  UserProgram.hpp
src/HWTrackController/Main/include/Lcd/: LcdApi.hpp
src/HWTrackController/Main/src/: Communications.cpp  Instruction.cpp  Routine.cpp  Rung.cpp  Scheduler.cpp  TagDatabase.cpp  Task.cpp  UserProgram.cpp
src/HWTrackController/Main/src/Lcd/: LcdApi.cpp
src/HWTrainController/: CMakeLists.txt  Distance.cpp  Distance.h  Failures.cpp  Failures.h  HWTrainArduinoConnector.py  HWTrainControllerMain.cpp  HWTrainControllerMain.py  HWTrainControllerRequestManager.cpp  HWTrainRequestManager.cpp  Insidetrain.cpp  Insidetrain.h  Speedstuff.cpp  Speedstuff.h  Trainfunctions.cpp  Trainfunctions.h  hw_train_controller_api.py  main.cpp
src/HWTrainController/HWTrainController/: Failures.h  HWTrainControllerRequestManager.h
src/HWTrainController/Main/: Main.ino
src/HWTrainController/Main/include/: ArduinoLogger.hpp  HWTrainCommunications.hpp
src/HWTrainController/Main/include/Button/: Button.hpp
src/HWTrainController/Main/include/Devices/: Devices.hpp
src/HWTrainController/Main/include/Joystick/: Joystick.hpp
src/HWTrainController/Main/src/: HWTrainCommunications.cpp  HWTrainCommunications.py
src/HWTrainController/Main/src/Button/: Button.cpp
src/HWTrainController/Main/src/Devices/: Devices.cpp
src/SWTrackController/: CMakeLists.txt  Instruction.cpp  Routine.cpp  SWTrackControllerMain.cpp  SWTrackControllerRequestManager.cpp  Task.cpp  TestTrackSystem.py  TrackContoller.cpp  TrackController.cpp  TrackControllerdef.py  TrackSystem.py  UserProgram.cpp  plc_components.py  track_controller.py  track_system.py
src/SWTrackController/Compiler/: Lexer.py  emitter.py  lexer.py  parse.py
src/SWTrackController/c++/: CMakeLists.txt  Routine.cpp  SWTrackControllerMain.cpp  TrackController.cpp  UserProgram.cpp
src/SWTrainController/: CMakeLists.txt  ControlSystem.cpp  ControlSystem.h  ControlSystem.py  Controller.cpp  Controller.py  SWTrainControllerMain.cpp  SWTrainControllerRequestManager.cpp  SWTrainDef.h
src/SWTrainController/UI/: Information.py  Information.ui  TrainActions.py  TrainActions.ui  TrainController.py  TrainController.ui
src/Server/: BufferFunctions.hpp  ConnectionHandler.cpp  Server.cpp
src/TrackModel/: CMakeLists.txt  Map_Page-2.ui  Map_Page.ui  TrackInfo.cpp  TrackModelDef.py  TrackModelMain.cpp  TrackModelRequestManager.cpp  gui.py
src/TrainModel/: Block.py  BlockCatalogue.cpp  BlockCatalogue.py  CMakeLists.txt  Train.cpp  Train.py  TrainCatalogue.cpp  TrainCatalogue.py  TrainModelMain.cpp  TrainModelRequestManager.cpp
src/UI/: Login_Page.ui  debug.ui  debug_gui.py  login_gui.py  login_page.ui  server_functions.py  signals.py  timekeeper.ui  timekeeper_gui.py  window_manager.py
src/UI/CTC/: __init__.py  ctc_dispatch_train.ui  ctc_gui.py  ctc_gui_py.py  ctc_main.ui  ctc_map_menu.ui  ctc_schedule_import.ui  ctc_view_green_line.ui  ctc_view_map.ui  ctc_view_red_line.ui  ctc_view_signal_green_line.ui  ctc_view_track.ui  ctc_view_train.ui
src/UI/CTC/UI/: ctc_view_signal.ui
src/UI/CTC/old/: ctc_view_signal_red_line.ui
src/UI/Common/: alert.ui  common.py  confirmation.ui  downloading.ui
src/UI/HWTrainController/: HWTrainController_gui.py  HW_Train_Controller.py  HW_Train_Controller.ui
src/UI/SWTrackController/: sw_track_gui.py  swtrack_gui.py  track_controller.ui
src/UI/SWTrainController/: TrainController.py  TrainController.ui  TrainEngineer.py  TrainEngineer.ui
src/UI/TrackModel/: Map_Page.ui  gui.py  trackmodel_gui.py
src/UI/TrainModel/: Login_Page.ui  Map_Page.ui  Train_Info_Page1.ui  Train_Info_Page2.ui  Train_Info_Page3.ui  Train_Menu.ui  Train_Parameter.ui  Train_Report.ui  gui.py  main_page.ui  trainmodel_gui.py
tests/UnitTests/: CMakeLists.txt  ConnectionHandlerUT.cpp  ServerTestSuite.cpp
tests/UnitTests/CTC/: CMakeLists.txt  CTCDefUT.cpp  CTCTestSuite.cpp  CTCTrainSystemUT.cpp  TestTrainSystem.py  test_train_system.py
tests/UnitTests/Common/: CMakeLists.txt  CommonTestSuite.cpp  RequestManagerRepositoryUT.cpp  RequestUT.cpp  ServiceQueueUT.cpp
tests/UnitTests/HWTrackController/: CMakeLists.txt  HWTrackControllerRequestManagerUT.cpp  HWTrackCtrlTestSuite.cpp  HashMapUT.cpp  ListUT.cpp  RequestManagerUT.cpp  conftest.py  test_emit_program.py
tests/UnitTests/HWTrainController/: CMakeLists.txt
tests/UnitTests/SWTrackController/: CMakeLists.txt  SWTrackControllerTestSuite.cpp  SWTrackControllerUT.cpp  TestTrackSystem.py
tests/UnitTests/SWTrackController/Compiler/: test_compiler.py  test_lexer.py  test_parser.py
tests/UnitTests/SWTrainController/: CMakeLists.txt  ControllerUT.cpp  ControllerUT.py  SWTrainControllerTestSuite.cpp  SWTrainControllerUT.cpp
tests/UnitTests/TrackModel/: CMakeLists.txt  TrackModelUT.cpp
tests/UnitTests/TrainModel/: CMakeLists.txt  TrainModelUT.cpp
(+142 files in other folders)
